added forms for login and reg pages

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,6 +12,11 @@
 
 <div class="container mt-5">
     <h1 th:text="Логин"></h1>
+    <form action="/login" method="post">
+        <input type="text" name="name" placeholder="Имя пользователя" class="form-control"><br>
+        <input type="text" name="password" placeholder="Пароль" class="form-control"><br>
+        <button type="submit" class="btn btn-success">Войти</button>
+    </form>
 </div>
 
 
