--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -7,12 +7,13 @@
     </a>
 
     <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-      <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/login">Войти</a>
-      <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/registration">Регистрация</a>
+      <a th:if="${auth == false}" class="me-3 py-2 link-body-emphasis text-decoration-none" href="/login">Войти</a>
+      <a th:if="${auth == false}" class="me-3 py-2 link-body-emphasis text-decoration-none" href="/registration">Регистрация</a>
       <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Главная</a>
       <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/blog">Блог</a>
       <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/blog/add">Добавить блог</a>
       <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">Про нас</a>
+      <a th:if="${auth == true}" class="me-3 py-2 link-body-emphasis text-decoration-none" href="/logout">Выйти</a>
     </nav>
   </div>
 
