--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,8 +12,10 @@
 
 <div class="container mt-5">
     <h1 th:text="Логин"></h1>
-    <form action="/login" method="post">
-        <input type="text" name="name" placeholder="Имя пользователя" class="form-control"><br>
+    <div th:if="${param.error}" class="alert alert-danger">Invalid username or password.</div>
+    <div th:if="${param.logout}" class="alert alert-success">You have been logged out.</div>
+    <form th:action="|@{/login}|" method="post">
+        <input type="text" name="username" placeholder="Имя пользователя" class="form-control"><br>
         <input type="text" name="password" placeholder="Пароль" class="form-control"><br>
         <button type="submit" class="btn btn-success">Войти</button>
     </form>
