--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -16,9 +16,9 @@
     <div th:text="|${errors}|" class="alert alert-danger" role="alert" />
   </div>
   <form action="/registration" method="post">
-    <input type="text" name="name" placeholder="Имя пользователя" class="form-control"><br>
-    <input type="text" name="password" placeholder="Пароль" class="form-control"><br>
-    <input name="passwordConfirm" placeholder="Повторите пароль" class="form-control"><br>
+    <input type="text" name="name" placeholder="Имя пользователя" class="form-control" autocomplete="off"><br>
+    <input type="text" name="password" placeholder="Пароль" class="form-control" autocomplete="off"><br>
+    <input name="passwordConfirm" placeholder="Повторите пароль" class="form-control" autocomplete="off"><br>
     <button type="submit" class="btn btn-success">Зарегистрироваться</button>
   </form>
 </div>
