--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="|${title}|" />
+    <title>О нас</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
@@ -11,7 +11,7 @@
 
 
 <div class="container mt-5">
-    <h1 th:text="|${title}|"></h1>
+    <h1>Ну что-то о нас</h1>
 </div>
 
 
