--- a/src/main/resources/templates/blog-edit.html
+++ b/src/main/resources/templates/blog-edit.html
@@ -10,7 +10,7 @@
 <header th:insert="~{blocks/header.html::header}"></header>
 
 
-<div class="container mt-5">
+<div class="container">
     <h1>Редактирование статьи</h1>
     <form method="post">
         <div th:each="el : ${post}">
