--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -10,7 +10,7 @@
 <header th:insert="~{blocks/header.html::header}"></header>
 
 
-<div class="container mt-5">
+<div class="container">
     <h1>Ну что-то о нас</h1>
 </div>
 
