--- a/src/main/resources/templates/blog-add.html
+++ b/src/main/resources/templates/blog-add.html
@@ -10,7 +10,7 @@
 <header th:insert="~{blocks/header.html::header}"></header>
 
 
-<div class="container mt-5 mb-5">
+<div class="container mb-5">
   <h1>Добавление статьи</h1>
   <form action="/blog/add" method="post">
     <input type="text" name="title" placeholder="Введите название статьи" class="form-control"><br>
