--- a/src/main/resources/templates/blog-details.html
+++ b/src/main/resources/templates/blog-details.html
@@ -10,7 +10,7 @@
 <header th:insert="~{blocks/header.html::header}"></header>
 
 
-<div class="container mt-5">
+<div class="container">
     <div class="alert alert-info mt-2">
         <h3 th:text="|${post.title}|"></h3>
         <p th:text="|${post.full_text}|"></p>
