--- a/src/main/resources/templates/blog-details.html
+++ b/src/main/resources/templates/blog-details.html
@@ -13,25 +13,38 @@
 <div class="container">
     <div class="alert alert-info mt-2">
         <h3 th:text="|${post.title}|"></h3>
-        <p th:if="${owner != null}" th:text="Автор |${owner.name}|"></p>
+        <p th:if="${owner != null}" th:text="|Автор ${owner.name}|"></p>
         <p th:unless="${owner != null}">???</p>
         <p th:text="|${post.full_text}|"></p>
         <p th:text="|${post.views} просмотров|"></p>
-        <a th:if="${isOwn == true}" th:href="|/blog/${post.id}/edit|" class="btn btn-warning">Редактировать</a><br><br>
-        <form th:if="${isOwn == true}" th:action="|/blog/${post.id}/remove|" method="post">
+        <a th:if="${owner.id == curUser.id}" th:href="|/blog/${post.id}/edit|" class="btn btn-warning">Редактировать</a><br><br>
+        <form th:if="${owner.id == curUser.id}" th:action="|/blog/${post.id}/remove|" method="post">
             <button type="submit" th:href="|/blog/${post.id}/remove|" class="btn btn-warning">Удалить</button>
         </form>
 
     </div>
+
+
     <form th:if="${auth == true}"  th:action="|/blog/${post.id}/addComment|" method="post">
         <textarea name="full_text" placeholder="Введите комментарий" class="form-control"></textarea><br>
         <button type="submit" th:href="|/blog/${post.id}/addComment|" class="btn btn-warning">Прокомментировать</button>
     </form>
-    <div th:each="comm : ${comments}" class = "mt-2">
+
+
+    <div th:each="comm : ${comments}" class = "alert alert-warning mt-2">
         <h3 th:text="|${comm.author}|"></h3>
         <p th:text="|${comm.full_text}|"></p>
+
+        <form th:if="${curUser.name == comm.author}" th:action="|/blog/${post.id}/editComment/${comm.id}|" method="post" style="display: inline-block">
+            <button type="submit" th:href="|/blog/${post.id}/editComment/${comm.id}|" class="btn btn-warning">Редактировать</button>
+        </form>
+        <form th:if="${curUser.name == comm.author}" th:action="|/blog/${post.id}/removeComment/${comm.id}|" method="post" style="display: inline-block">
+            <button type="submit" th:href="|/blog/${post.id}/removeComment/${comm.id}|" class="btn btn-warning">Удалить</button>
+        </form>
+
     </div>
 </div>>
+
 
 <footer th:insert="~{blocks/footer.html::footer}"></footer>
 
