--- a/src/main/resources/templates/blog-details.html
+++ b/src/main/resources/templates/blog-details.html
@@ -33,15 +33,15 @@
 
     <div th:each="comm : ${comments}" class = "alert alert-warning mt-2">
         <h3 th:text="|${comm.author}|"></h3>
-        <p th:text="|${comm.full_text}|" id="fullTextLabel"></p>
+        <p th:text="|${comm.full_text}|" th:id="|fullTextLabel${comm.id}|"></p>
 
 
-        <button  type="button" class="btn btn-warning">Редактировать</button>
+        <button th:if="${curUser.name == comm.author}"  type="button" class="btn btn-warning" th:id="|editBut${comm.id}|" th:onclick="|editComment(${comm.id})|">Редактировать</button>
 
-        <form th:if="${curUser.name == comm.author}" th:action="|/blog/${post.id}/editComment/${comm.id}|"  method="post" hidden="hidden" id="confirmForm" >
+        <form th:if="${curUser.name == comm.author}" th:action="|/blog/${post.id}/editComment/${comm.id}|"  method="post" hidden="hidden" th:id="|confirmForm${comm.id}|" >
 
-            <textarea th:text="|${comm.full_text}|" class="form-control" name="full_text" id="fullTextArea" hidden="hidden"></textarea>
-            <button type="submit" th:href="|/blog/${post.id}/editComment/${comm.id}|" class="btn btn-warning"  id="confirmButton">Готово</button>
+            <textarea th:text="|${comm.full_text}|" class="form-control" name="full_text" th:id="|fullTextArea${comm.id}|" ></textarea>
+            <button type="submit" th:href="|/blog/${post.id}/editComment/${comm.id}|" class="btn btn-warning" th:id="|confirmButton${comm.id}|" th:onclick="|editCommentConfirm(${comm.id})|" >Готово</button>
         </form>
         <form th:if="${curUser.name == comm.author}" th:action="|/blog/${post.id}/removeComment/${comm.id}|" method="post" class="mt-2">
             <button type="submit" th:href="|/blog/${post.id}/removeComment/${comm.id}|" class="btn btn-warning">Удалить</button>
@@ -55,29 +55,27 @@
 
 </body>
 <script>
-    let editCommentBut = document.getElementById("commentEdit")
-    let confirmEditBut = document.getElementById("confirmButton")
+    // хуйня, переделать
 
-    editCommentBut.onclick = function () {
-        let label = document.getElementById("fullTextLabel")
-        let textArea = document.getElementById("fullTextArea")
-        let form = document.getElementById("confirmForm")
+    function editComment(commentId) {
+        let editBut = document.getElementById("editBut" + commentId)
+        let label = document.getElementById("fullTextLabel" + commentId)
+        let form = document.getElementById("confirmForm" + commentId)
 
         label.hidden = true
-        editCommentBut.hidden = true
-        textArea.hidden = false
+        editBut.hidden = true
         form.hidden = false
     }
 
-    confirmEditBut.onclick = function (){
-        let label = document.getElementById("fullTextLabel")
-        let textArea = document.getElementById("fullTextArea")
-        let form = document.getElementById("confirmForm")
+    function editCommentConfirm(commentId) {
+        let editBut = document.getElementById("editBut" + commentId)
+        let label = document.getElementById("fullTextLabel" + commentId)
+        let form = document.getElementById("confirmForm" + commentId)
 
         label.hidden = false
-        editCommentBut.hidden = false
-        textArea.hidden = true
+        editBut.hidden = false
         form.hidden = true
     }
+
 </script>
 </html>
