--- a/src/main/resources/templates/blog-details.html
+++ b/src/main/resources/templates/blog-details.html
@@ -32,7 +32,7 @@
 
 
     <div th:each="comm : ${comments}" class = "alert alert-warning mt-2">
-        <h3 th:text="|${comm.author}|"></h3>
+        <a th:href="|/profile/3|"><h3 th:text="|${comm.author}|"></h3></a>
         <p th:text="|${comm.full_text}|" th:id="|fullTextLabel${comm.id}|"></p>
 
 
