--- a/src/main/resources/templates/blog-add.html
+++ b/src/main/resources/templates/blog-add.html
@@ -13,8 +13,8 @@
 <div class="container mb-5">
   <h1>Добавление статьи</h1>
   <form action="/blog/add" method="post">
-    <input type="text" name="title" placeholder="Введите название статьи" class="form-control"><br>
-    <input type="text" name="anons" placeholder="Введите анонс" class="form-control"><br>
+    <input type="text" name="title" placeholder="Введите название статьи" class="form-control" autocomplete="off"><br>
+    <input type="text" name="anons" placeholder="Введите анонс" class="form-control" autocomplete="off"><br>
     <textarea name="full_text" placeholder="Введите текст" class="form-control"></textarea><br>
     <button type="submit" class="btn btn-success">Добавить статью</button>
   </form>
