--- a/src/main/resources/templates/blog-details.html
+++ b/src/main/resources/templates/blog-details.html
@@ -10,13 +10,13 @@
 <header th:insert="~{blocks/header.html::header}"></header>
 
 
-<div class="container">
+<div class="container min-vh-100">
     <div class="alert alert-info mt-2">
         <h3 th:text="|${post.title}|"></h3>
         <a th:if="${owner != null}" th:text="|Автор: ${owner.name}|" th:href="|/profile/${owner.id}|"></a>
         <p th:unless="${owner != null}">???</p>
         <p th:text="|${post.full_text}|"></p>
-        <a th:if="${owner.id == curUser.id}" th:href="|/blog/${post.id}/edit|" class="btn btn-warning">Редактировать</a><br><br>
+        <a th:if="${owner.id == curUser.id}" th:href="|/blog/${post.id}/edit|" class="btn btn-warning mb-2">Редактировать</a><br>
         <form th:if="${owner.id == curUser.id}" th:action="|/blog/${post.id}/remove|" method="post">
             <button type="submit" th:href="|/blog/${post.id}/remove|" class="btn btn-warning">Удалить</button>
         </form>
@@ -26,7 +26,7 @@
 
     <form  th:action="|/blog/${post.id}/addComment|" method="post">
         <textarea name="full_text" placeholder="Введите комментарий" class="form-control"></textarea><br>
-        <button type="submit" th:href="|/blog/${post.id}/addComment|" class="btn btn-warning">Прокомментировать</button>
+        <button type="submit" th:href="|/blog/${post.id}/addComment|" class="btn btn-warning mb-2">Прокомментировать</button>
     </form>
 
 
