--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,9 +1,10 @@
 <div th:fragment="footer">
     <div class="container">
         <p class="float-end mb-1">
-            <a href="#">Back to top</a>
+            <a href="#">Наверх</a>
         </p>
-        <p class="mb-1">Album example is © Bootstrap, but please download and customize it for yourself!</p>
-        <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="/docs/5.3/getting-started/introduction/">getting started guide</a>.</p>
+        <p class="mb-1"><a href="/">На главную</a></p>
+        <p th:if='${curUser.roles == "ROLE_ANONYMOUS"}' class="mb-0">Недавно на сайте?<a href="/registration">Зарегистрироваться</a></p>
+        <p th:if='${curUser.roles != "ROLE_ANONYMOUS"}' class="mb-0">Уже насиделись?<a href="/logout">Выйти</a></p>
     </div>
 </div>
