--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,5 +1,5 @@
 <div th:fragment="footer">
-    <div class="container">
+    <div class="container border-top">
         <p class="float-end mb-1">
             <a href="#">Наверх</a>
         </p>
