--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -11,7 +11,7 @@
       <a th:if='${curUser.roles == "ROLE_ANONYMOUS"}' class="me-3 py-2 link-body-emphasis text-decoration-none" href="/registration">Регистрация</a>
       <a th:if='${curUser.roles != "ROLE_ANONYMOUS"}' class="me-3 py-2 link-body-emphasis text-decoration-none" th:href="|/profile/${curUser.id}|">Мой профиль</a>
       <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Главная</a>
-      <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/blog/add">Добавить блог</a>
+      <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/add/blog">Добавить блог</a>
       <a th:if='${curUser.roles != "ROLE_ANONYMOUS"}' class="me-3 py-2 link-body-emphasis text-decoration-none" href="/logout">Выйти</a>
     </nav>
   </div>
