--- a/src/main/resources/templates/blog-add.html
+++ b/src/main/resources/templates/blog-add.html
@@ -12,7 +12,7 @@
 
 <div class="container min-vh-100">
   <h1>Добавление статьи</h1>
-  <form action="/blog/add" method="post">
+  <form action="/add/blog" method="post">
     <input type="text" name="title" placeholder="Введите название статьи" class="form-control" autocomplete="off"><br>
     <input type="text" name="anons" placeholder="Введите анонс" class="form-control" autocomplete="off"><br>
     <textarea name="full_text" placeholder="Введите текст" class="form-control"></textarea><br>
